sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value i
    i=0
    ^AlgCombSort:14: error: not found: value i
    while (i+ecart < taille)
           ^AlgCombSort:16: error: not found: value i
      if (plusPetit (i,i+ecart))
                     ^AlgCombSort:16: error: not found: value i
      if (plusPetit (i,i+ecart))
                       ^AlgCombSort:18: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:18: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:19: error: not found: value i
        i = i+1
        ^