sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  var taille = getNombreValeurs()
  var inverse = true
  while (ecart >1 || inverse==true)
  {
    inverse = false
    if (ecart>1)
    {
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i=0
    while (i+ecart < taille)
    {
      if (plusPetit (i,i+ecart))
      {
        echange(i,i+ecart)
        i = i+1
      }
    }
  }
}